Revise the wording of a few sections

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -43,7 +43,7 @@ layout: compress
 					<li><a href="/what_we_do/">What We Do</a></li>
 					<li><a href="http://docs.allmyles.com/">API</a></li>
 					<li><a href="http://dashboard.allmyles.com/">Log In</a></li>
-        			<li><a href="#">Get Started</a></li>
+					<li><a href="http://dashboard.allmyles.com/">Get Started</a></li>
 				</ul>
 			</div>
 		</div>
@@ -75,10 +75,9 @@ layout: compress
 		<div id="footer-info">
 			<div id="footer-menu">
 				<ul class="list-inline">
-					<li><a href="#">Marketplace</a></li>
 					<li><a href="/">Home</a></li>
 					<li><a href="http://docs.allmyles.com">Docs</a></li>
-					<li><a href="#">Issues</a></li>
+					<li><a href="http://allmyles.atlassian.net">Issues</a></li>
 					<li><a href="/tos/">Terms of Service</a></li>
 					<li><a href="/privacy_policy/">Privacy Policy</a></li>
 					<li><a href="/contact/">Contact</a></li>
