--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,6 +14,7 @@ layout: compress
 	<meta name="author" content="Allmyles Ltd.">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
+	<link href="//fonts.googleapis.com/css?family=Montserrat:700|Hind:600" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 	<style type="text/css">
@@ -83,7 +84,7 @@ layout: compress
 					<li><a href="/contact/">Contact</a></li>
 				</ul>
 			</div>
-			<p>Allmyles, 13-14 Madách Imre street, Budapest, 1075, Hungary <span>+36307480436</span> <a href="mailto:info@allmyles.com">info@allmyles.com</a></p>
+			<p>Allmyles, 13-14 Madách Imre street, Budapest, 1075, Hungary <span>+36&nbsp;30&nbsp;748&nbsp;0436</span> <a href="mailto:info@allmyles.com">info@allmyles.com</a></p>
 		</div>
 	</footer>
 
