Fix errors reported by HTML proofer

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -34,7 +34,7 @@ layout: compress
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/"><img src="/img/allmyles_logo.png"></a>
+				<a class="navbar-brand" href="/"><img src="/img/allmyles_logo.png" alt="Allmyles logo"></a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="main-navigation">
