News - rename menu item, highlighted dates

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -50,7 +50,7 @@ layout: compress
 			<div class="collapse navbar-collapse" id="main-navigation">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="/why">Why</a></li>
-					<li><a href="/news">How</a></li>
+					<li><a href="/news">News</a></li>
 					<li><a href="/what_we_do/">What We Do</a></li>
 					<li><a href="http://docs.allmyles.com/">API</a></li>
 					<li><a href="http://dashboard.allmyles.com/">Log In</a></li>
