--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -13,6 +13,7 @@
 @import "pages/subpages_global";
 @import "pages/news";
 @import "pages/why";
+@import "pages/how";
 @import "pages/what_we_do";
 @import "pages/tos";
 @import "pages/privacy_policy";
