--- a/_sass/_social_links.scss
+++ b/_sass/_social_links.scss
@@ -19,10 +19,10 @@
 
 			a {
 				font-size: 2em;
-				color: $withe;
+				color: $white;
 
 				&:hover {
-					color: $withe;
+					color: $white;
 				}
 			}
 		}
