--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,8 +5,8 @@
 * Variables
 */
 
-$totalWithe: #fff;
-$withe: #f7f7f7;
+$totalWhite: #fff;
+$white: #f7f7f7;
 $totalBlack: #000;
 $black: #252525;
 
