--- a/_sass/_button.scss
+++ b/_sass/_button.scss
@@ -6,14 +6,14 @@
 */
 
 .btn-allmyles {
-	color: $withe;
+	color: $white;
 	background: $primaryBrandColor;
 	text-transform: uppercase;
 	padding: 1em 6em 0.85em 6em;
 	letter-spacing: 2px;
 
 	&:hover {
-		color: $withe;
+		color: $white;
 		background: $primaryBrandColorHover;
 	}
 }
