--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -11,7 +11,7 @@
 	text-transform: uppercase;
 	text-align: center;
 	background: $darkBrandColor;
-	color: $withe;
+	color: $white;
 	padding: 1.8em;
 
 	#footer-info {
@@ -26,7 +26,7 @@
 
 					a {
 						text-decoration: none;
-						color: $withe;
+						color: $white;
 					}
 				}
 			}
