Reword Superfamous credit notice in footer

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -92,7 +92,7 @@ layout: compress
 				</ul>
 			</div>
 			<p>Allmyles, Károly krt 9. 1075 Budapest, Hungary <span>+36&nbsp;30&nbsp;748&nbsp;0436</span> <a href="mailto:info@allmyles.com">info@allmyles.com</a></p>
-			<p>Thank you for images to <a href="http://images.superfamous.com/">Superfamous.com</a></p>
+			<p>Images from <a href="http://images.superfamous.com/">Superfamous</a></p>
 		</div>
 	</footer>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
