--- a/_sass/pages/_contact.scss
+++ b/_sass/pages/_contact.scss
@@ -7,27 +7,44 @@
 
 .page-contact {
   #featured-image-contact {
-    background-image: url('../img/contact.jpg');
+    background-image: url('../img/featured_images/contact.jpg');
     background-size: cover;
   }
 
-  #map {
-    position: relative;
-    padding-bottom: 80%;
-    height: 0;
-    overflow: hidden;
+  .office {
+    .map {
+      height: 0;
+      width: 100%;
+      padding-bottom: 56.25%;
+      overflow: hidden;
+      position: relative;
 
-    iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: 10px;
-      width: 100% !important;
-      height: 70% !important;
+      .map-object {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+    }
+
+    .address-text {
+      display: block;
+      margin-bottom: 1em;
     }
   }
 
-  p#address {
-    margin-top: -210px;
+  .email {
+    .email-address {
+      margin-bottom: 2.5em;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      h4 {
+        font-weight: bold;
+      }
+    }
   }
 }
