--- a/_sass/pages/_how.scss
+++ b/_sass/pages/_how.scss
@@ -7,7 +7,7 @@
 
 .page-how {
   #featured-image-how {
-    background-image: url('../img/how.jpg');
+    background-image: url('../img/featured_images/how.jpg');
     background-size: cover;
   }
 
