--- a/_sass/pages/_news.scss
+++ b/_sass/pages/_news.scss
@@ -7,7 +7,7 @@
 
 .page-news {
   #featured-image-news {
-    background-image: url('../img/what_we_do.jpg');
+    background-image: url('../img/featured_images/news.jpg');
     background-size: cover;
   }
 }
