--- a/_sass/pages/_why.scss
+++ b/_sass/pages/_why.scss
@@ -7,7 +7,7 @@
 
 .page-why {
   #featured-image-why {
-    background-image: url('../img/why.jpg');
+    background-image: url('../img/featured_images/why.jpg');
     background-size: cover;
 
     .btn-online-as-different {
