--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,6 +1,7 @@
 ---
 layout: compress
 ---
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -12,10 +13,9 @@ layout: compress
   <link rel="icon" href="/img/favicon.ico">
 
   <meta name="author" content="Allmyles Ltd.">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+
   <link href="//fonts.googleapis.com/css?family=Montserrat:700|Hind:300,600" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
   <script type="text/javascript">
   !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","group","track","ready","alias","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="3.0.1";
@@ -59,7 +59,7 @@ layout: compress
 
   {{ content }}
 
-  <div id="social-links">
+  <section id="social-links">
     <ul class="list-inline">
       <li>
         <a target="_blank" href="https://www.facebook.com/allmyles">
@@ -77,24 +77,22 @@ layout: compress
         </a>
       </li>
     </ul>
-  </div>
-  <footer id="footer">
-    <div id="footer-info">
-      <div id="footer-menu">
-        <ul class="list-inline">
-          <li><a href="/">Home</a></li>
-          <li><a href="http://docs.allmyles.com">Docs</a></li>
-          <li><a href="http://allmyles.atlassian.net">Issues</a></li>
-          <li><a href="/tos/">Terms of Service</a></li>
-          <li><a href="/privacy_policy/">Privacy Policy</a></li>
-          <li><a href="/contact/">Contact</a></li>
-        </ul>
-      </div>
-      <p>Allmyles, Károly krt 9. 1075 Budapest, Hungary <span>+36&nbsp;30&nbsp;748&nbsp;0436</span> <a href="mailto:info@allmyles.com">info@allmyles.com</a></p>
-      <p>Images from <a href="http://images.superfamous.com/">Superfamous</a></p>
-    </div>
+  </section>
+
+  <footer class="site-footer">
+    <ul class="list-inline">
+      <li><a href="/">Home</a></li>
+      <li><a href="http://docs.allmyles.com">Docs</a></li>
+      <li><a href="http://allmyles.atlassian.net">Issues</a></li>
+      <li><a href="/tos/">Terms of Service</a></li>
+      <li><a href="/privacy_policy/">Privacy Policy</a></li>
+      <li><a href="/contact/">Contact</a></li>
+    </ul>
+    <p>Allmyles, Károly krt 9. 1075 Budapest, Hungary <span>+36&nbsp;30&nbsp;748&nbsp;0436</span> <a href="mailto:info@allmyles.com">info@allmyles.com</a></p>
+    <p>Images from <a href="http://images.superfamous.com/">Superfamous</a></p>
   </footer>
+
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
