--- a/_sass/global/_variables.scss
+++ b/_sass/global/_variables.scss
@@ -10,6 +10,8 @@ $white: #f7f7f7;
 $totalBlack: #000;
 $black: #252525;
 
+$defaultFont: 'Hind', sans-serif;
+$headingFont: 'Montserrat', sans-serif;
 $defaultFontSize: 19px;
 $defaultFontSizeMobile: 16px;
 $defaultFontColor: #5C5C5C;
@@ -23,8 +25,5 @@ $secondaryDarkBrandColor: #333;
 
 $mainHeaderColor: #858585;
 $featuredImageOverlay: rgba(0,0,0,.3);
-
-$rangerRowColor: $primaryBrandColorHover;
-$rangerItemColor: $primaryBrandColor;
 
 $light: #C2C2C2;
