Fix copyright notice style in footer.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -90,7 +90,7 @@ layout: compress
       <li><a href="/contact/">Contact</a></li>
     </ul>
     <p>Allmyles, Károly krt 9. 1075 Budapest, Hungary <span>+36&nbsp;30&nbsp;748&nbsp;0436</span> <a href="mailto:info@allmyles.com">info@allmyles.com</a></p>
-    <p>Images from <a href="http://images.superfamous.com/">Superfamous</a></p>
+    <p class="copyright">Images from <a href="http://images.superfamous.com/">Superfamous</a></p>
   </footer>
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
