Add initial media queries and metadata fixes.

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -4,6 +4,7 @@
 @import "global/featured_image";
 @import "global/button";
 @import "global/quote";
+@import "global/mediaqueries";
 
 @import "layout/header";
 @import "layout/social_links";
