--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -32,6 +32,14 @@ layout: compress
   </style>
 </head>
 <body>
+
+  <div class="debug">
+    <div class="visible-xs">XS</div>
+		<div class="visible-sm">SM</div>
+		<div class="visible-md">MD</div>
+		<div class="visible-lg">LG</div>
+  </div>
+
   <nav class="navbar navbar-allmyles">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -60,7 +68,7 @@ layout: compress
 
   {{ content }}
 
-  <section id="social-links">
+  <section class="social-links">
     <ul class="list-inline">
       <li>
         <a target="_blank" href="https://www.facebook.com/allmyles">
