--- a/_sass/global/variables.scss
+++ b/_sass/global/variables.scss
@@ -1,6 +1,6 @@
 /**
-* @files
-* _variables.scss
+* @file
+* variables.scss
 *
 * Variables
 */
@@ -13,7 +13,6 @@ $black: #252525;
 $defaultFont: 'Hind', sans-serif;
 $headingFont: 'Montserrat', sans-serif;
 $defaultFontSize: 19px;
-$defaultFontSizeMobile: 16px;
 $defaultFontColor: #5C5C5C;
 $secondaryFontColor: #1a1a1a;
 $defaultHeadingColor: #3e3e3e;
