--- a/_sass/layout/social_links.scss
+++ b/_sass/layout/social_links.scss
@@ -1,11 +1,11 @@
 /**
-* @files
-* _social_links.scss
+* @file
+* social_links.scss
 *
 * Social links
 */
 
-#social-links {
+.social-links {
   background: $secondaryDarkBrandColor;
   text-align: center;
 
