--- a/_sass/global/general.scss
+++ b/_sass/global/general.scss
@@ -1,6 +1,6 @@
 /**
-* @files
-* _general.scss
+* @file
+* general.scss
 *
 * General
 */
@@ -10,7 +10,7 @@ body {
   font-family: $defaultFont;
   color: $defaultFontColor;
   font-size: $defaultFontSize;
-  background-image: url('../img/background.png');
+  //background-image: url('../img/background.png');
 }
 
 h1 {
