Fix links style in footer

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -85,9 +85,9 @@ layout: compress
       <li><a href="/">Home</a></li>
       <li><a href="http://docs.allmyles.com">Docs</a></li>
       <li><a href="http://allmyles.atlassian.net">Issues</a></li>
-      <li><a href="/tos/">Terms of Service</a></li>
-      <li><a href="/privacy_policy/">Privacy Policy</a></li>
-      <li><a href="/contact/">Contact</a></li>
+      <li><a href="/tos">Terms of Service</a></li>
+      <li><a href="/privacy_policy">Privacy Policy</a></li>
+      <li><a href="/contact">Contact</a></li>
     </ul>
     <p>Allmyles, Károly krt 9. 1075 Budapest, Hungary <span>+36&nbsp;30&nbsp;748&nbsp;0436</span> <a href="mailto:info@allmyles.com">info@allmyles.com</a></p>
     <p class="copyright">Images from <a href="http://images.superfamous.com/">Superfamous</a></p>
