--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -50,7 +50,7 @@ layout: compress
           <li><a href="/how">How</a></li>
           <li><a href="/what_we_do">What We Do</a></li>
           <li><a href="/news">News</a></li>
-          <li><a href="http://docs.allmyles.com/">API</a></li>
+          <li><a href="http://docs.allmyles.apiary.io">API</a></li>
           <li><a href="http://dashboard.allmyles.com/">Log In</a></li>
           <li><a href="http://dashboard.allmyles.com/">Get Started</a></li>
         </ul>
@@ -83,7 +83,7 @@ layout: compress
   <footer class="site-footer">
     <ul class="list-inline">
       <li><a href="/">Home</a></li>
-      <li><a href="http://docs.allmyles.com">Docs</a></li>
+      <li><a href="http://docs.allmyles.apiary.io">Docs</a></li>
       <li><a href="http://allmyles.atlassian.net">Issues</a></li>
       <li><a href="/tos">Terms of Service</a></li>
       <li><a href="/privacy_policy">Privacy Policy</a></li>
