--- a/_sass/pages/how.scss
+++ b/_sass/pages/how.scss
@@ -9,7 +9,7 @@
   #featured-image-how {
     background-image: url('../img/featured_images/how.jpg');
     background-size: cover;
-    .btn-kist-try-it {
+    .btn-just-try-it {
 	      margin-top: 5.2em;
 	      @extend .btn-allmyles;
 	    }
