--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -100,8 +100,20 @@ layout: compress
     <p>Allmyles, Károly krt 5. 1075 Budapest, Hungary <span>+36&nbsp;30&nbsp;748&nbsp;0436</span> <a href="mailto:info@allmyles.com">info@allmyles.com</a></p>
     <p class="copyright">Images from <a href="http://images.superfamous.com/">Superfamous</a></p>
   </footer>
-
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/59d349974854b82732ff33e4/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 </html>
