--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -117,8 +117,8 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
   <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us8.list-manage.com","uuid":"34427879ce889cb69ae1b9e75","lid":"7e58348ec9"}) })</script>
 <script type="text/javascript" id="cookieinfo"
-	src="//cookieinfoscript.com/js/cookieinfo.min.js">
-	position="top"
+	src="//cookieinfoscript.com/js/cookieinfo.min.js"
+	position="top">
 </script>
 
   </body>
