--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -125,6 +125,7 @@ s0.parentNode.insertBefore(s1,s0);
 	</script>
 <script type="text/javascript" id="cookieinfo"
 	src="//cookieinfoscript.com/js/cookieinfo.min.js"
+	position="top"
 	data-bg="#645862"
 	data-fg="#FFFFFF"
 	data-link="#F1D600"
