replace cookieinfo sript

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -123,15 +123,7 @@ s0.parentNode.insertBefore(s1,s0);
 	require(["mojo/signup-forms/Loader"], 
 		function(L) { L.start({"baseUrl":"mc.us8.list-manage.com","uuid":"34427879ce889cb69ae1b9e75","lid":"7e58348ec9"}) })
 	</script>
-<script type="text/javascript" id="cookieinfo"
-	src="//cookieinfoscript.com/js/cookieinfo.min.js"
-	position=top
-	data-bg="#645862"
-	data-fg="#FFFFFF"
-	data-link="#F1D600"
-	data-cookie="CookieInfoScript"
-	data-text-align="left"
-       data-close-text="Got it!">
-</script>
+<script type="text/javascript" id="cookiebanner"
+  src="https://cdnjs.cloudflare.com/ajax/libs/cookie-banner/1.0.0/cookiebanner.min.js"></script>
 </body>
 </html>
