--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -124,8 +124,9 @@ s0.parentNode.insertBefore(s1,s0);
 		function(L) { L.start({"baseUrl":"mc.us8.list-manage.com","uuid":"34427879ce889cb69ae1b9e75","lid":"7e58348ec9"}) })
 	</script>
 <script type="text/javascript" id="cookiebanner"
-  src="https://cdnjs.cloudflare.com/ajax/libs/cookie-banner/1.0.0/cookiebanner.min.js"
-	data-position="top">
-	</script>
+    src="//cdnjs.cloudflare.com/ajax/libs/cookie-banner/1.0.0/cookiebanner.min.js"
+    data-height="20px" data-position="top"
+    data-message="We use cookies to improve your browsing experience.">
+</script>
 </body>
 </html>
