remove height from cookiebanner script

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -125,7 +125,7 @@ s0.parentNode.insertBefore(s1,s0);
 	</script>
 <script type="text/javascript" id="cookiebanner"
     src="//cdnjs.cloudflare.com/ajax/libs/cookie-banner/1.0.0/cookiebanner.min.js"
-    data-height="20px" data-position="top"
+    data-position="top"
     data-message="We use cookies to improve your browsing experience.">
 </script>
 </body>
