--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -126,8 +126,10 @@ s0.parentNode.insertBefore(s1,s0);
 <script type="text/javascript" id="cookieinfo"
 	src="//cookieinfoscript.com/js/cookieinfo.min.js"
 	data-position="top"
-	data-fg="#FFFFFF"
-	data-link="#F1D600"
+	data-link="#ec6d2b"
+	data-divlink="#ffffff"
+	data-bg="#333"
+	data-divlinkbg="#ec6d2b"
 	data-cookie="CookieInfoScript"
 	data-text-align="left"
         data-close-text="Got it!">
