--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -127,12 +127,12 @@ s0.parentNode.insertBefore(s1,s0);
 	src="//cookieinfoscript.com/js/cookieinfo.min.js"
 	data-position="top"
 	data-link="#ec6d2b"
+	data-fg="#fff"
 	data-divlink="#ffffff"
 	data-bg="#333"
 	data-divlinkbg="#ec6d2b"
 	data-cookie="CookieInfoScript"
-	data-text-align="left"
-        data-close-text="Got it!">
+	data-text-align="left">
 </script>
 
 </body>
