--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -126,7 +126,7 @@ s0.parentNode.insertBefore(s1,s0);
 <script type="text/javascript" id="cookieinfo"
 	src="//cookieinfoscript.com/js/cookieinfo.min.js"
 	data-position="top"
-	data-fontsize="10px"
+	data-font-size="10px"
 	data-height="1px"
 	data-divlink="#333"
 	data-divlinkbg="#eee"
