--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -127,7 +127,9 @@ s0.parentNode.insertBefore(s1,s0);
 	src="//cookieinfoscript.com/js/cookieinfo.min.js"
 	data-position="top"
 	data-font-size="10px"
-	data-height="1px"
+	data-height="5px"
+	data-line-hight="5px"
+	data-padding="3px 18px"
 	data-divlink="#333"
 	data-divlinkbg="#eee"
 	data-cookie="CookieInfoScript"
