accept-on-scroll

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -129,7 +129,8 @@ s0.parentNode.insertBefore(s1,s0);
 	data-divlink="#333"
 	data-divlinkbg="#eee"
 	data-cookie="CookieInfoScript"
-	data-text-align="left">
+	data-text-align="left"
+	accept-on-scroll="True">
 </script>
 
 </body>
