--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -59,7 +59,7 @@ layout: compress
           <li><a href="/what_we_do">What We Do</a></li>
           <li><a href="/news">News</a></li>
           <li><a href="http://docs.allmyles.com">API</a></li>
-	  <li><a href="https://status.allmyles.com/">StatusPage</a></li>
+	  <li><a href="https://status.allmyles.com/">Incidents</a></li>
           <li><a href="http://dashboard.allmyles.com/">Log In</a></li>
           <li><a href="http://dashboard.allmyles.com/">Get Started</a></li>
         </ul>
