--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,6 +10,7 @@ layout: compress
   <meta name="X-UA-Compatible" content="IE=Edge, chrome=1">
 
   <title>{{ page.title }}</title>
+  <meta name="description" content="{% include head.html %}" />
   <link rel="icon" href="/img/favicon.ico">
 
   <meta name="author" content="Allmyles Ltd.">
