--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,7 +6,7 @@ layout: compress
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="X-UA-Compatible" content="IE=Edge, chrome=1">
 
   <title>{{ page.title }}</title>
