add initial content

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,1 +1,2 @@
 
+Travel APIs Our Travel APIs directly connect you to all the data you need to build an innovative website or app. Your customers will be able to take advantage of the best deals on flights, hotels or car hire from wherever they are in the world - either as three independent travel solutions or integr
