constract individual content

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,2 +1,1 @@
-
-Travel APIs Our Travel APIs directly connect you to all the data you need to build an innovative website or app. Your customers will be able to take advantage of the best deals on flights, hotels or car hire from wherever they are in the world - either as three independent travel solutions or integr
+Travel API from Allmyles Our Travel API provides non travel industry professionals access to global and bookable travel content to build innovative web or native apps. You can provide your customer with the best flight fares, hotel rates and car rental rates thus creating your Y-gen travel reseller.
