--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -11,6 +11,7 @@ layout: compress
 
   <title>{{ page.title }}</title>
   <meta name="description" content="{% include head.html %}" />
+	{% seo %}
   <link rel="icon" href="/img/favicon.ico">
 
   <meta name="author" content="Allmyles Ltd.">
