--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,7 +8,7 @@ layout: compress
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="X-UA-Compatible" content="IE=Edge, chrome=1">
       <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-      <meta name="description" content="{% include head.html %}" />
+      <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
       {% seo %}
       <link rel="icon" href="/img/favicon.ico">
       <meta name="author" content="Allmyles Ltd.">
