--- a/_includes/template.html
+++ b/_includes/template.html
@@ -1,5 +1,5 @@
 <!-- Begin Jekyll SEO tag v{{ seo_tag.version }} -->
-{% if seo_tag.title? %}
+{% if _seo_tag.title? %}
   <title>{{ seo_tag.title }}</title>
 {% endif %}
 
