--- a/_includes/template.html
+++ b/_includes/template.html
@@ -1,11 +1,11 @@
 <!-- Begin Jekyll SEO tag v{{ seo_tag.version }} -->
-{% if _seo_tag.title? %}
+{% if seo_tag.title? %}
   <title>{{ seo_tag.title }}</title>
 {% endif %}
 
 <meta name="generator" content="Jekyll v{{ jekyll.version }}" />
 
-{% if seo_tag.page_title %}
+{% if _seo_tag.page_title %}
   <meta property="og:title" content="{{ seo_tag.page_title }}" />
 {% endif %}
 
