--- a/_includes/template.html
+++ b/_includes/template.html
@@ -5,7 +5,7 @@
 
 <meta name="generator" content="Jekyll v{{ jekyll.version }}" />
 
-{% if _seo_tag.page_title %}
+{% if seo_tag.page_title %}
   <meta property="og:title" content="{{ seo_tag.page_title }}" />
 {% endif %}
 
@@ -20,7 +20,7 @@
   <meta property="og:description" content="{{ seo_tag.description }}" />
 {% endif %}
 
-{% if _site.url %}
+{% if site.url %}
   <link rel="canonical" href="{{ seo_tag.canonical_url }}" />
   <meta property="og:url" content="{{ seo_tag.canonical_url }}" />
 {% endif %}
