shorten what url

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -72,7 +72,7 @@ layout: compress
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/why">Why</a></li>
           <li><a href="/how">How</a></li>
-          <li><a href="/what_we_do">What We Do</a></li>
+          <li><a href="/what">What We Do</a></li>
           <li><a href="/news">News</a></li>
           <li><a href="http://docs.allmyles.com">API</a></li>
 	  <li><a href="https://status.allmyles.com/">Incidents</a></li>
