--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,7 +8,7 @@ layout: compress
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta charset="utf-8">
       <meta prefix="og: http://ogp.me/ns#" property="og:description" content="{% if page.description %}{{ page.description}}{% else %}{{ site.data.general.description}}{% endif %}">
-      
+      <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website">
       
       <link rel="icon" href="/img/favicon.ico">
       
