--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,7 +9,8 @@ layout: compress
       <meta charset="utf-8">
       <meta prefix="og: http://ogp.me/ns#" property="og:description" content="{% if page.description %}{{ page.description}}{% else %}{{ site.data.general.description}}{% endif %}">
       <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website">
-      
+      <meta prefix="og: http://ogp.me/ns#" property="og:image" content="/img/allmyles_logo.png/">
+      <meta prefix="og: http://ogp.me/ns#" property="og:url" content="http://allmyles.com/">
       <link rel="icon" href="/img/favicon.ico">
       
       <meta name="author" content="Allmyles Ltd.">
