traditional title html tag added

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,6 +7,7 @@ layout: compress
       <meta name="X-UA-Compatible" content="IE=Edge, chrome=1">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta charset="utf-8">
+      <title>Travel APIs — Allmyles</title>
       <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Travel API from Allmyles">
       <meta prefix="og: http://ogp.me/ns#" property="og:description" content="{% if page.description %}{{ page.description}}{% else %}{{ site.data.general.description}}{% endif %}">
       <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website">
