--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,7 +2,7 @@
 layout: compress
 ---
 <!doctype html>
-<html lang="en">
+<html xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:website="http://ogp.me/ns/website" lang="en" itemscope itemtype="http://schema.org/WebPage"  class="touch-styles" >
    <head>
       <meta name="X-UA-Compatible" content="IE=Edge, chrome=1">
       <meta name="viewport" content="width=device-width, initial-scale=1">
