--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,12 +8,14 @@ layout: compress
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta charset="utf-8">
       <title>Travel APIs — Allmyles</title>
+      <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+      <link rel="canonical" href="http://allmyles.com/"/>
+      <meta property="og:site_name" content="Allmyles"/>
       <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Travel API from Allmyles">
       <meta prefix="og: http://ogp.me/ns#" property="og:description" content="{% if page.description %}{{ page.description}}{% else %}{{ site.data.general.description}}{% endif %}">
       <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website">
       <meta prefix="og: http://ogp.me/ns#" property="og:image" content="img/allmyles_logo.png">
       <meta prefix="og: http://ogp.me/ns#" property="og:url" content="http://allmyles.com/">
-      <link rel="icon" href="/img/favicon.ico">
       
       <meta name="author" content="Allmyles Ltd.">
       <meta name="google-site-verification" content="tB_3wuPCitQ4x9xONjL160sH4Ub7rDV6yq3USlPKvZ4" />
