add twitter card meta data

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -17,6 +17,14 @@ layout: compress
       <meta prefix="og: http://ogp.me/ns#" property="og:url" content="http://allmyles.com/">
       <meta prefix="og: http://ogp.me/ns#" property="og:description" content="{% if page.description %}{{ page.description}}{% else %}{{ site.data.general.description}}{% endif %}">
       <meta name="author" content="Allmyles Ltd.">
+      <meta itemprop="name" content="Travel APIs"/>
+      <meta itemprop="url" content="http://allmyles.com/"/>
+      <meta itemprop="description" content="{% if page.description %}{{ page.description}}{% else %}{{ site.data.general.description}}{% endif %}"/>
+      <meta name="twitter:title" content="Travel APIs"/>
+      <meta name="twitter:url" content="http://allmyles.com/"/>
+      <meta name="twitter:card" content="summary"/>
+      <meta name="twitter:description" content="{% if page.description %}{{ page.description}}{% else %}{{ site.data.general.description}}{% endif %}"/>
+      <meta name="description" content="{% if page.description %}{{ page.description}}{% else %}{{ site.data.general.description}}{% endif %}"/>
       <meta name="google-site-verification" content="tB_3wuPCitQ4x9xONjL160sH4Ub7rDV6yq3USlPKvZ4" />
       <link href="//fonts.googleapis.com/css?family=Montserrat:700|Hind:300,600" rel="stylesheet" type="text/css">
       <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
