--- a/_sass/global/variables.scss
+++ b/_sass/global/variables.scss
@@ -11,7 +11,7 @@ $totalBlack: #000;
 $black: #252525;
 
 $defaultFont: 'Hind', sans-serif;
-$headingFont: 'Montserrat', sans-serif;
+$headingFont: 'Arial', sans-serif;
 $defaultFontSize: 19px;
 $defaultFontColor: #5C5C5C;
 $secondaryFontColor: #1a1a1a;
