reduce h1 font weight

--- a/_sass/global/featured_image.scss
+++ b/_sass/global/featured_image.scss
@@ -25,7 +25,8 @@
         font-size: 3em;
         letter-spacing: 2px;
         line-height: 1em;
-        margin-bottom: 20px
+        margin-bottom: 20px;
+        font-weight: 100;
       }
 
       span {
