update font size

--- a/_sass/global/button.scss
+++ b/_sass/global/button.scss
@@ -8,7 +8,7 @@
 .btn-allmyles {
   color: $white;
   background: $primaryBrandColor;
-
+  font-size: 1em;
   padding: 0.9em 3em 0.75em 3em;
   letter-spacing: 1.3px;
 
