--- a/_sass/global/general.scss
+++ b/_sass/global/general.scss
@@ -20,7 +20,7 @@ h2 {
   font-size: 0.6em;
   letter-spacing: 2px;
   line-height: 1.2em;
-  text-transform: uppercase;
+  text-transform: none;
   color: $defaultHeadingColor;
 }
 
