--- a/_sass/global/general.scss
+++ b/_sass/global/general.scss
@@ -27,7 +27,7 @@ h2 {
 h3 {
   font-family: $headingFont;
   font-size: 1em;
-  text-transform: uppercase;
+  text-transform: none;
   color: $defaultHeadingColor;
 }
 
