margin bottom 3 em for all sections

--- a/_sass/pages/frontpage.scss
+++ b/_sass/pages/frontpage.scss
@@ -13,7 +13,7 @@
 
   .page-section {
     line-height: 180%;
-    margin-bottom: 100px;
+    margin-bottom: 3em;
 
     &:first-child {
       margin-top: 0;
@@ -54,7 +54,7 @@
   #hello {
     text-align: center;
     
-    margin: 2em 0;
+    margin: 3em 0;
 
     h2 {
       
