change last-child border color

--- a/_sass/layout/header.scss
+++ b/_sass/layout/header.scss
@@ -55,7 +55,7 @@
 
       &:last-child {
         a {
-          border: 2px solid $white;
+          border: 2px solid #ec6c2b;
           border-radius: 3px;
 
           &:hover {
