--- a/_sass/layout/header.scss
+++ b/_sass/layout/header.scss
@@ -60,7 +60,7 @@
 
           &:hover {
             color: $totalBlack;
-            background: $white;
+            background: #ec6c2b;
           }
         }
       }
