make last child a hover white

--- a/_sass/layout/header.scss
+++ b/_sass/layout/header.scss
@@ -59,7 +59,7 @@
           border-radius: 3px;
 
           &:hover {
-            color: $totalBlack;
+            color: $white;
             background: #ec6c2b;
           }
         }
