enrich travel apis with flight, hotel, car

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,20 +7,20 @@ layout: compress
       <meta name="X-UA-Compatible" content="IE=Edge, chrome=1">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta charset="utf-8">
-      <title>Travel APIs — Allmyles</title>
+      <title>Travel APIs — Flight API, Hotel API, Car Rentl API from Allmyles</title>
       <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
       <link rel="canonical" href="http://allmyles.com/"/>
       <meta property="og:site_name" content="Allmyles"/>
-      <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Travel API from Allmyles">
+      <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Travel API — Flight API, Hotel API, Car Rentl API from Allmyles">
       <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website">
       <meta prefix="og: http://ogp.me/ns#" property="og:image" content="img/allmyles_logo.png">
       <meta prefix="og: http://ogp.me/ns#" property="og:url" content="http://allmyles.com/">
       <meta prefix="og: http://ogp.me/ns#" property="og:description" content="{% if page.description %}{{ page.description}}{% else %}{{ site.data.general.description}}{% endif %}">
       <meta name="author" content="Allmyles Ltd.">
-      <meta itemprop="name" content="Travel APIs"/>
+      <meta itemprop="name" content="Travel APIs — Flight API, Hotel API, Car Rentl API from"/>
       <meta itemprop="url" content="http://allmyles.com/"/>
       <meta itemprop="description" content="{% if page.description %}{{ page.description}}{% else %}{{ site.data.general.description}}{% endif %}"/>
-      <meta name="twitter:title" content="Travel APIs"/>
+      <meta name="twitter:title" content="Travel APIs — Flight API, Hotel API, Car Rentl API from"/>
       <meta name="twitter:url" content="http://allmyles.com/"/>
       <meta name="twitter:card" content="summary"/>
       <meta name="twitter:description" content="{% if page.description %}{{ page.description}}{% else %}{{ site.data.general.description}}{% endif %}"/>
