--- a/_sass/global/variables.scss
+++ b/_sass/global/variables.scss
@@ -13,6 +13,7 @@ $black: #252525;
 $defaultFont: 'Hind', sans-serif;
 $headingFont: 'Arial', sans-serif;
 $defaultFontSize: 19px;
+$defaultFontWeight: 400;
 $defaultFontColor: #5C5C5C;
 $secondaryFontColor: #1a1a1a;
 $defaultHeadingColor: #3e3e3e;
