--- a/_sass/global/general.scss
+++ b/_sass/global/general.scss
@@ -10,6 +10,7 @@ body {
   font-family: $defaultFont;
   color: $defaultFontColor;
   font-size: $defaultFontSize;
+  font-weight: $defaultFontWeight;
 }
 
 h1 {
