fix rental typo

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -11,7 +11,7 @@ layout: compress
       <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
       <link rel="canonical" href="http://allmyles.com/"/>
       <meta property="og:site_name" content="Allmyles"/>
-      <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Travel API — Flight API, Hotel API, Car Rentl API from Allmyles">
+      <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Travel API — Flight API, Hotel API, Car Rental API from Allmyles">
       <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website">
       <meta prefix="og: http://ogp.me/ns#" property="og:image" content="img/allmyles_logo.png">
       <meta prefix="og: http://ogp.me/ns#" property="og:url" content="http://allmyles.com/">
