--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,7 +7,7 @@ layout: compress
       <meta name="X-UA-Compatible" content="IE=Edge, chrome=1">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta charset="utf-8">
-      <title>Travel APIs — Flight API, Hotel API, Car Rentl API from Allmyles</title>
+      <title>Travel APIs — Flight API, Hotel API, Car Rental API from Allmyles</title>
       <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
       <link rel="canonical" href="http://allmyles.com/"/>
       <meta property="og:site_name" content="Allmyles"/>
