add pricing link

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -83,6 +83,7 @@ layout: compress
 
       <div class="collapse navbar-collapse" id="main-navigation">
         <ul class="nav navbar-nav navbar-right">
+	  <li><a href="#pricing">Pricing</a></li>
           <li><a href="/why">Why</a></li>
           <li><a href="/how">How</a></li>
           <li><a href="/what">What We Do</a></li>
